--- a/Online Course/Homepage/CSS/layout.css
+++ b/Online Course/Homepage/CSS/layout.css
@@ -70,30 +70,28 @@ img.sidemark{
 }
 
 /*-------------container------------*/
+#Homepage-title{
+    display: block;
+    font-size: 18px;
+    padding-bottom: 14px; 
+    color: #008ee2;
+    text-decoration: none;
+    border-bottom:1px solid #eee;
+    width: 100%;
+}
+
+.header{
+    margin-bottom:30px ;
+}
+
+.e-course-title-left{
+    width: 100%;
+}
 
 .main-content{
     padding: 20px;
     padding-bottom: 160px;
-    padding-right: 100px;
-}
-
-#Homepage-title{
-    font-size: 18px;
-    padding-bottom: 5px; 
-    color: #008ee2;
-    text-decoration: none;
-}
-
-hr.title-line{
-    height: 0;
-    line-height: 0;
-    margin: 10px 0;
-    border: none;
-    border-bottom: 1px solid #eee!important;
-    clear: both;
-    overflow: hidden;
-    background: 0 0;
-    padding: 0;
+    padding-right: 50px;
 }
 
 .intro{
@@ -109,6 +107,11 @@ hr.title-line{
     padding-bottom: 20px;
 }
 /*-----------------sideboard--------------*/
+.sideboard{ padding-right: 80px; }
+@media screen and (max-width:1200px) { 
+    .sideboard{ padding-right: 0px; } 
+}
+
 .sidetitle{
     text-align: left;
     font-size: 16px;
