--- a/Online Course/Homepage/CSS/layout.css
+++ b/Online Course/Homepage/CSS/layout.css
@@ -100,11 +100,26 @@ img.sidemark{
     width: 100%;
 }
 
+.course-main-title-overall{
+    padding: 50px 0px 30px 0px;
+}
+
 .main-title{
     font-size: 24px;
     color: black;
     padding-top: 50px;
     padding-bottom: 20px;
+}
+
+.course-main-title{
+    font-size: 24px;
+    color: black;
+    padding-top: 0px;
+    padding-bottom: 20px;
+}
+
+.main-title-btn{
+    text-align: right;
 }
 /*-----------------sideboard--------------*/
 .sideboard{ padding-right: 80px; }
