--- a/Online Course/Homepage/CSS/layout.css
+++ b/Online Course/Homepage/CSS/layout.css
@@ -3,8 +3,8 @@
  * @file config.css
  * @author computersicencekaoyan
  * @brief 
- * @version 2.0
- * @date 2023-05-27
+ * @version 3.0
+ * @date 2023-06-14
  * 
  * @copyright Copyright (c) 2023
  * 
@@ -120,6 +120,12 @@ img.sidemark{
 
 .main-title-btn{
     text-align: right;
+}
+
+.colla-title{
+    /*---Module---*/
+    padding-top: 30px;
+    font-weight: bold;
 }
 /*-----------------sideboard--------------*/
 .sideboard{ padding-right: 80px; }
