--- a/Online Course/Homepage/CSS/style.css
+++ b/Online Course/Homepage/CSS/style.css
@@ -1,3 +1,15 @@
+/**
+ * @file config.css
+ * @author computersicencekaoyan
+ * @brief 
+ * @version 3.0
+ * @date 2023-06-14
+ * 
+ * @copyright Copyright (c) 2023
+ * 
+ */
+
+
 /*-------calendar-------*/
 table.calendar {
     font-family: arial, helvetica;
@@ -275,19 +287,22 @@ table.calendar thead tr {
     margin-inline-start: 0px;
     margin-inline-end: 0px;
     padding-inline-start: 0px;
-    
+    border: 1px solid #C7CDD1;
+    border-bottom: 0px;
 }
 
 .file-list-item{
     background: #fff;
-    border: 1px solid #C7CDD1;
-    margin-bottom:2px;
+    border-bottom: 1px solid #C7CDD1;
+    border-left:3px solid #0aa00a ;
+    margin-bottom:0px;
 }
 
 .file-list-item:hover{
     background: #eef7ff;
-    border: 1px solid #C7CDD1;
-    margin-bottom:2px;
+    border-bottom: 1px solid #C7CDD1;
+    border-left:3px solid #0aa00a ;
+    margin-bottom:0px;
 }
 
 .file-list-item a{
@@ -399,6 +414,8 @@ td.course-information{
     text-decoration: none;
 }
 
+
+/*-------refer-to-website-----*/
 .refer-out-web{
     border-top-left-radius: 3px;
     border-top-right-radius: 3px;
@@ -406,6 +423,21 @@ td.course-information{
     border-bottom-right-radius: 3px;
     width: 100%;
     height: 400px;
+}
+
+.outer-reference-ver2{
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+.outer-reference-ver2-header{
+    background-color: #FAFAFA;
+}
+
+.outer-reference-ver2-title{
+    color: #000000;
+    text-align: center;
+    font-size: 16px;
 }
 
 /*--------Course Overview------*/
@@ -618,9 +650,8 @@ td.as-due{
 
 
 
-/*--------background-----*/
+/*--------background-color----*/
 
-.bg-gray{
-    background-color: #FAFAFA;
-}
+.bg-gray{ background-color: #FAFAFA; }
+
 
